// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Render alt - value[0] 1`] = `
.emotion-0 {
  outline: none;
}

<img
  alt="This is the alt"
  class="emotion-0"
  data-testid="alt"
  id="alt"
  src="https://docs.lowdefy.com/public/logo-light-theme.png"
/>
`;

exports[`Render alt - value[0] 2`] = `
.emotion-0 {
  outline: none;
}

<img
  class="emotion-0"
  crossorigin="anonymous"
  data-testid="alt"
  id="alt"
  src="https://docs.lowdefy.com/public/logo-light-theme.png"
/>
`;

exports[`Render decoding - value[0] 1`] = `
.emotion-0 {
  outline: none;
}

<img
  class="emotion-0"
  data-testid="decoding"
  decoding="sync"
  id="decoding"
  src="https://docs.lowdefy.com/public/logo-light-theme.png"
/>
`;

exports[`Render default - value[0] 1`] = `
.emotion-0 {
  outline: none;
}

<img
  class="emotion-0"
  data-testid="default"
  id="default"
/>
`;

exports[`Render height - value[0] 1`] = `
.emotion-0 {
  outline: none;
}

<img
  class="emotion-0"
  data-testid="height"
  height="30"
  id="height"
  src="https://docs.lowdefy.com/public/logo-light-theme.png"
/>
`;

exports[`Render loading - value[0] 1`] = `
.emotion-0 {
  outline: none;
}

<img
  class="emotion-0"
  data-testid="loading"
  id="loading"
  loading="lazy"
  src="https://docs.lowdefy.com/public/logo-light-theme.png"
/>
`;

exports[`Render onClick - value[0] 1`] = `
.emotion-0 {
  outline: none;
  cursor: pointer;
}

<img
  class="emotion-0"
  data-testid="onClick"
  id="onClick"
  src="https://docs.lowdefy.com/public/logo-light-theme.png"
/>
`;

exports[`Render required = true alt - value[0] 1`] = `
.emotion-0 {
  outline: none;
}

<img
  alt="This is the alt"
  class="emotion-0"
  data-testid="alt"
  id="alt"
  src="https://docs.lowdefy.com/public/logo-light-theme.png"
/>
`;

exports[`Render required = true alt - value[0] 2`] = `
.emotion-0 {
  outline: none;
}

<img
  class="emotion-0"
  crossorigin="anonymous"
  data-testid="alt"
  id="alt"
  src="https://docs.lowdefy.com/public/logo-light-theme.png"
/>
`;

exports[`Render required = true decoding - value[0] 1`] = `
.emotion-0 {
  outline: none;
}

<img
  class="emotion-0"
  data-testid="decoding"
  decoding="sync"
  id="decoding"
  src="https://docs.lowdefy.com/public/logo-light-theme.png"
/>
`;

exports[`Render required = true default - value[0] 1`] = `
.emotion-0 {
  outline: none;
}

<img
  class="emotion-0"
  data-testid="default"
  id="default"
/>
`;

exports[`Render required = true height - value[0] 1`] = `
.emotion-0 {
  outline: none;
}

<img
  class="emotion-0"
  data-testid="height"
  height="30"
  id="height"
  src="https://docs.lowdefy.com/public/logo-light-theme.png"
/>
`;

exports[`Render required = true loading - value[0] 1`] = `
.emotion-0 {
  outline: none;
}

<img
  class="emotion-0"
  data-testid="loading"
  id="loading"
  loading="lazy"
  src="https://docs.lowdefy.com/public/logo-light-theme.png"
/>
`;

exports[`Render required = true onClick - value[0] 1`] = `
.emotion-0 {
  outline: none;
  cursor: pointer;
}

<img
  class="emotion-0"
  data-testid="onClick"
  id="onClick"
  src="https://docs.lowdefy.com/public/logo-light-theme.png"
/>
`;

exports[`Render required = true sizes - value[0] 1`] = `
.emotion-0 {
  outline: none;
}

<img
  class="emotion-0"
  data-testid="sizes"
  id="sizes"
  sizes="20px"
  src="https://docs.lowdefy.com/public/logo-light-theme.png"
/>
`;

exports[`Render required = true src - value[0] 1`] = `
.emotion-0 {
  outline: none;
}

<img
  class="emotion-0"
  data-testid="src"
  id="src"
  src="https://docs.lowdefy.com/public/logo-light-theme.png"
/>
`;

exports[`Render required = true srcSet - value[0] 1`] = `
.emotion-0 {
  outline: none;
}

<img
  class="emotion-0"
  data-testid="srcSet"
  id="srcSet"
  src="https://docs.lowdefy.com/public/logo-light-theme.png"
  srcset="https://docs.lowdefy.com/public/logo-dark-theme.png"
/>
`;

exports[`Render required = true style - value[0] 1`] = `
.emotion-0 {
  outline: none;
  border: 1px solid red;
}

<img
  class="emotion-0"
  data-testid="style"
  id="style"
  src="https://docs.lowdefy.com/public/logo-light-theme.png"
/>
`;

exports[`Render required = true width - value[0] 1`] = `
.emotion-0 {
  outline: none;
}

<img
  class="emotion-0"
  data-testid="width"
  height="10"
  id="width"
  src="https://docs.lowdefy.com/public/logo-light-theme.png"
/>
`;

exports[`Render sizes - value[0] 1`] = `
.emotion-0 {
  outline: none;
}

<img
  class="emotion-0"
  data-testid="sizes"
  id="sizes"
  sizes="20px"
  src="https://docs.lowdefy.com/public/logo-light-theme.png"
/>
`;

exports[`Render src - value[0] 1`] = `
.emotion-0 {
  outline: none;
}

<img
  class="emotion-0"
  data-testid="src"
  id="src"
  src="https://docs.lowdefy.com/public/logo-light-theme.png"
/>
`;

exports[`Render srcSet - value[0] 1`] = `
.emotion-0 {
  outline: none;
}

<img
  class="emotion-0"
  data-testid="srcSet"
  id="srcSet"
  src="https://docs.lowdefy.com/public/logo-light-theme.png"
  srcset="https://docs.lowdefy.com/public/logo-dark-theme.png"
/>
`;

exports[`Render style - value[0] 1`] = `
.emotion-0 {
  outline: none;
  border: 1px solid red;
}

<img
  class="emotion-0"
  data-testid="style"
  id="style"
  src="https://docs.lowdefy.com/public/logo-light-theme.png"
/>
`;

exports[`Render width - value[0] 1`] = `
.emotion-0 {
  outline: none;
}

<img
  class="emotion-0"
  data-testid="width"
  height="10"
  id="width"
  src="https://docs.lowdefy.com/public/logo-light-theme.png"
/>
`;

exports[`Test Schema alt 1`] = `true`;

exports[`Test Schema alt 2`] = `null`;

exports[`Test Schema alt 3`] = `true`;

exports[`Test Schema alt 4`] = `null`;

exports[`Test Schema decoding 1`] = `true`;

exports[`Test Schema decoding 2`] = `null`;

exports[`Test Schema default 1`] = `true`;

exports[`Test Schema default 2`] = `null`;

exports[`Test Schema height 1`] = `true`;

exports[`Test Schema height 2`] = `null`;

exports[`Test Schema loading 1`] = `true`;

exports[`Test Schema loading 2`] = `null`;

exports[`Test Schema onClick 1`] = `true`;

exports[`Test Schema onClick 2`] = `null`;

exports[`Test Schema sizes 1`] = `true`;

exports[`Test Schema sizes 2`] = `null`;

exports[`Test Schema src 1`] = `true`;

exports[`Test Schema src 2`] = `null`;

exports[`Test Schema srcSet 1`] = `true`;

exports[`Test Schema srcSet 2`] = `null`;

exports[`Test Schema style 1`] = `true`;

exports[`Test Schema style 2`] = `null`;

exports[`Test Schema width 1`] = `true`;

exports[`Test Schema width 2`] = `null`;

exports[`triggerEvent onClick 1`] = `
.emotion-0 {
  outline: none;
}

<img
  class="emotion-0"
  data-testid="one"
  id="one"
/>
`;
